# vivi

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh-CN.md
crates/vivi-cli/: Cargo.toml
crates/vivi-cli/src/: main.rs
crates/vivi-codegen/: Cargo.toml
crates/vivi-codegen/src/: expr.rs  function.rs  lib.rs  module.rs  sourcemap.rs  system.rs
crates/vivi-interp/: Cargo.toml
crates/vivi-interp/src/: lib.rs
crates/vivi-lexer/: Cargo.toml
crates/vivi-lexer/src/: lib.rs
crates/vivi-lsp/: Cargo.toml
crates/vivi-lsp/src/: main.rs
crates/vivi-parser/: Cargo.toml
crates/vivi-parser/src/: ast.rs  lib.rs  parser.rs
crates/vivi-sema/: Cargo.toml
crates/vivi-sema/src/: layout.rs  lib.rs  resolve.rs  types.rs
crates/vivi-web/: Cargo.toml  build.rs
crates/vivi-web/src/: lib.rs
dist-galaxy/: benchmark.html
editors/: vivi.tmLanguage.json
editors/vscode/: extension.js  language-configuration.json  package.json
examples/: bench.html  buffered-render.vivi  demo.html  demo.vivi  galaxy-bench.vivi  galaxy.vivi  input-demo.vivi  movement.vivi  test.html  universe.vivi  use-demo.vivi
std/host/: _init.js  canvas.js  debug.js  input.js  random.js  render.js  time.js
std/vivi/: input.vivi  math.vivi  render.vivi
tests/integration/: Cargo.toml
tests/integration/benches/: tick_throughput.rs
tests/integration/src/: lib.rs
