[package]
name = "vivi-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vivi"
path = "src/main.rs"

[dependencies]
vivi-parser = { path = "../vivi-parser" }
vivi-sema = { path = "../vivi-sema" }
vivi-codegen = { path = "../vivi-codegen" }
vivi-interp = { path = "../vivi-interp" }
vivi-web = { path = "../vivi-web" }
clap = { workspace = true }
miette = { workspace = true }
